nowa struktura dla wzorca MVC

--- a/zabawa_klasami_cs/zabawa_klasami_cs.csproj
+++ b/zabawa_klasami_cs/zabawa_klasami_cs.csproj
@@ -42,7 +42,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MVC\Kontroler_GB.cs" />
     <Compile Include="MVC\Model_GB.cs" />
+    <Compile Include="MVC\Widok_GB.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Samochod.cs" />
